Bug 16158 - Words not aligned in the table

--- a/trunk/configurator/src/main/webapp/css/style.css
+++ b/trunk/configurator/src/main/webapp/css/style.css
@@ -93,6 +93,11 @@
     text-align:center;
 }
 
+.projectName
+{
+     padding-left: 10px;
+}
+
 .new
 {
     color:#3333FF;
